--- a/components/lua_rtos/Kconfig
+++ b/components/lua_rtos/Kconfig
@@ -737,6 +737,10 @@ menu "Lua RTOS"
 			  	config LUA_RTOS_LUA_USE_VL53L0X
 				  	bool "Include vl53l0x module in build"
 				  	default y
+
+				config CONFIG_LUA_RTOS_LUA_USE_PPP
+				  	bool "Include pppos module in build"
+				  	default y
 			endmenu
 		  endmenu
 	  endmenu
