--- a/components/spiffs_image/Makefile.projbuild
+++ b/components/spiffs_image/Makefile.projbuild
@@ -13,4 +13,4 @@ flashfs: $(SDKCONFIG_MAKEFILE) mkspiffs
 	@echo "$(ESPTOOLPY_WRITE_FLASH)"
 	@echo "$(MKSPIFFS_COMPONENT_PATH)/../mkspiffs/src/mkspiffs -c $(SPIFFS_IMAGE_COMPONENT_PATH)/$(SPIFFS_IMAGE) -b $(CONFIG_LUA_RTOS_SPIFFS_LOG_BLOCK_SIZE) -p $(CONFIG_LUA_RTOS_SPIFFS_LOG_PAGE_SIZE) -s $(CONFIG_LUA_RTOS_SPIFFS_SIZE) $(BUILD_DIR_BASE)/spiffs_image.img"
 	$(MKSPIFFS_COMPONENT_PATH)/../mkspiffs/src/mkspiffs -c $(SPIFFS_IMAGE_COMPONENT_PATH)/$(SPIFFS_IMAGE) -b $(CONFIG_LUA_RTOS_SPIFFS_LOG_BLOCK_SIZE) -p $(CONFIG_LUA_RTOS_SPIFFS_LOG_PAGE_SIZE) -s $(CONFIG_LUA_RTOS_SPIFFS_SIZE) $(BUILD_DIR_BASE)/spiffs_image.img
-	$(ESPTOOLPY_WRITE_FLASH) $(CONFIG_LUA_RTOS_SPIFFS_BASE_ADDR) $(BUILD_DIR_BASE)/spiffs_image.img
+	#$(ESPTOOLPY_WRITE_FLASH) $(CONFIG_LUA_RTOS_SPIFFS_BASE_ADDR) $(BUILD_DIR_BASE)/spiffs_image.img
