--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "*.inc": "cpp",
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "status.h": "c",
+        "net.c": "cpp",
+        "status.c": "cpp"
     }
 }
