--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,37 @@
         "lobject.h": "c",
         "lparser.h": "c",
         "rsa.h": "c",
-        "lrodefs.h": "c"
+        "lrodefs.h": "c",
+        "can.h": "c",
+        "can_regdef.h": "c",
+        "curl.h": "c",
+        "multi.h": "c",
+        "formdata.h": "c",
+        "urldata.h": "c",
+        "libssh2_priv.h": "c",
+        "sftp.h": "c",
+        "tftspi.h": "c",
+        "commondigest.h": "c",
+        "basic_string.h": "c",
+        "stl_bvector.h": "c",
+        "stl_vector.h": "c",
+        "readline.h": "c",
+        "gssapi_krb5.h": "c",
+        "iconv.h": "c",
+        "host_priv.h": "c",
+        "vm_map.h": "c",
+        "event.h": "c",
+        "buffer.h": "c",
+        "crypto.h": "c",
+        "md4.h": "c",
+        "md5.h": "c",
+        "objects.h": "c",
+        "pem.h": "c",
+        "pkcs7.h": "c",
+        "pqueue.h": "c",
+        "sha.h": "c",
+        "ssl3.h": "c",
+        "stack.h": "c",
+        "tls1.h": "c"
     }
 }
