--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,8 @@
         "os_defines.h": "c",
         "_null.h": "c",
         "vl53l0x_platform.c": "cpp",
-        "i2c.c": "cpp"
+        "i2c.c": "cpp",
+        "gzguts.h": "c",
+        "locale_facets.h": "c"
     }
 }
